--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "deploy": "surge ./public --domain weather-checker.cbayley.surge.sh",
-    "start": "browser-sync start --server 'public' --files 'public'"
+    "start": "browser-sync start --server --startPath public --files public",
+    "sass": "sass --watch public\\src\\sass:public\\out\\css"
   },
   "dependencies": {
     "browser-sync": "^2.23.6",
