--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,17 @@
   "extends": [
     "standard"
   ],
+  "env": {
+    "browser": true
+  },
   "rules": {
-    "semi": ["error", "always", {"omitLastInOneLineBlock": true}],
+    "semi": [
+      "error",
+      "always",
+      {
+        "omitLastInOneLineBlock": true
+      }
+    ],
     "space-before-function-paren": "off",
     "indent": "off"
   }
